# tempo

./: CMakeLists.txt
src/: tempo.f  tparin.f
